fix contact us info text alignment

--- a/SalonML/SalonML/src/app/core/home/cp-gallery/cp-gallery.component.css
+++ b/SalonML/SalonML/src/app/core/home/cp-gallery/cp-gallery.component.css
@@ -43,3 +43,7 @@
     flex: 0 1 50% !important;
   }
 }
+
+.content h6 {
+  text-align: left;
+}
